--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -57,7 +57,8 @@ jobs:
 
     - name: Build and push image Aliyun
       run: |
-        docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $ALIYUN_REGISTRY
+        #docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $ALIYUN_REGISTRY
+        docker login -u lin_wei_hua -p shi123456 crpi-mzamidcq77irwdvc.cn-shanghai.personal.cr.aliyuncs.com
         # 数据预处理,判断镜像是否重名
         declare -A duplicate_images
         declare -A temp_map
