--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,10 +7,10 @@ on:
 
 
 env:
-  ALIYUN_REGISTRY: "${{ secrets.aliyunImage.ALIYUN_REGISTRY }}"
-  ALIYUN_NAME_SPACE: "${{ secrets.aliyunImage.ALIYUN_NAME_SPACE }}"
-  ALIYUN_REGISTRY_USER: "${{ secrets.aliyunImage.ALIYUN_REGISTRY_USER }}"
-  ALIYUN_REGISTRY_PASSWORD: "${{ secrets.aliyunImage.ALIYUN_REGISTRY_PASSWORD }}"
+  ALIYUN_REGISTRY: "crpi-mzamidcq77irwdvc.cn-shanghai.personal.cr.aliyuncs.com "
+  ALIYUN_NAME_SPACE: "linwh-images"
+  ALIYUN_REGISTRY_USER: "lin_wei_hua "
+  ALIYUN_REGISTRY_PASSWORD: "shi123456"
 
 jobs:
 
